LOGCXX-299: odbcappender.cpp does not compile with unixODBC on Linux